data/all_generated_tests/raw_wast_tests/call_indirect_MismanagementofBlockNesting_4246.wast
;; 5. **Test Description:**    Embed a `call_indirect` within a nested `loop` and invoke indirect calls that return values utilized outside the loop to validate that control transfer and value handling does not disrupt the nested flow.    - **Constraint Checked:** Control transfer with return values in nested loops.    - **Mismanagement Relation:** Ensures return values do not cause mismanagement of looping constructs.

(assert_invalid
  (module
    (type $sig (func (result i32)))
    (table funcref (elem $f))
    (func $f (result i32) (i32.const 42))
    (func $test
      (local $val i32)
      (loop
        (call_indirect (type $sig) (i32.const 0))
        (set_local $val)
        (br_if 0 (i32.const 0))  ;; Exit loop immediately
      )
      (i32.eqz (get_local $val))  ;; Use the value outside the loop
    )
  )
  "type mismatch or invalid control flow management"
)